adds test